# easyexif

./: CMakeLists.txt
